tests/sksl/errors/GrBadIn.fp
in half4 c;
void main() {
    sk_OutColor = c;
}
